--- a/src/main/asciidoc/srs/anwendungsfälle.adoc
+++ b/src/main/asciidoc/srs/anwendungsfälle.adoc
@@ -1,5 +1,252 @@
 == Anwendungsfälle
 
+[cols="1h, 3"]
+[[UC0010]]
+|===
+|ID                         |**<<UC0010>>**
+|Name                       |Login/Logout
+|Description                |Ein Benutzer muss sich beim System anmelden (authentifizieren) können, um auf weitere Funktionen zugreifen zu können.
+Dieser Prozess muss durch Abmeldung rückgängig gemacht werden können.
+|Actors                     |Mitarbeiter
+|Trigger                    |
+_Login_: Der Benutzer möchte durch Einloggen auf "versteckte" Funktionen zugreifen.
+
+_Logout_: Der Benutzer möchte den Shop verlassen.
+|Precondition(s)  a|
+_Login_: Der Benutzer ist noch nicht authentifiziert.
+
+_Logout_: Benutzer ist authentifiziert
+|Essential Steps a|
+_Login_:
+
+1. Benutzerzugriffe auf "Einloggen" in der Navigationsleiste
+2. Benutzer gibt seine Zugangsdaten ein
+3. Der Benutzer drückt auf die Schaltfläche "Anmelden".
+
+_Logout_:
+
+1. Benutzer klickt in der Navigationsleiste auf "Ausloggen".
+2. Der Benutzer ist nicht authentifiziert und wird auf dem Startbildschirm angezeigt.
+
+|Extensions                 |-
+|Functional Requirements    |<<F0010>>
+|===
+
+[cols="1h, 3"]
+[[UC0020]]
+|===
+|ID                         |**<<UC0020>>**
+|Name                       |Mitarbeiter wird erstellt
+|Description                |Ein Admin sollte in der Lage sein einen Account für einen Mitarbeiter zu erstellen.
+|Actors                     |Admin
+|Trigger                    |Der Administrator möchte ein Konto für einen Benutzer erstellen, indem er auf "Registrieren" drückt.
+|Precondition(s)           a|Mitarbeit ist noch nicht eingeloggt (authentifiziert)
+|Essential Steps           a|
+1.  Der Admin drückt "Registrieren".
+2.  Er gibt den gewünschten Benutzernamen, das Passwort und die Adresse ein.
+3.  System prüft die Eindeutigkeit des Benutzernamens
+. Wenn einzigartig: Es wird ein Konto mit den angegebenen Daten angelegt.
+. Andernfalls: Es wird eine Fehlermeldung angezeigt.|Extensions                 |-
+|Functional Requirements    |<<F0020>>, <<F0021>>
+|===
+
+[[UC0100]]
+[cols="1h, 3"]
+|===
+|ID                         |**<<UC0100>>**
+|Name                       |Bilanzen abrufen
+|Description                |Every visitor of the Videoshop (i.e. *User*) shall be able to access the Catalog, which displays all the offered discs.
+The Catalog must provide the possibility to distinguish between different types of Discs (Dvd, Blu-Ray).
+|Actors                     |User
+|Trigger                    |Accessing the navigation element, which is responsible for displaying the Catalog.
+|Precondition(s)           a|None
+|Essential Steps           a|1. User clicks on the navigation element named "DVD Katalog" or "BluRay Katalog".
+2. User is shown all Discs of the selected category.
+|Extensions                 |None
+|Functional Requirements    | <<F0100>>, <<F0110>>, <<F0111>>, <<F0112>>
+|===
+
+[[sequence_diagram_view_catalog]]
+image::.\images\Sequence_Diagrams\View_Catalog.png[Sequence diagram: View Catalog, 100%, 100%, pdfwidth=100%, title= "Sequence diagram: View Catalog", align=center]
+
+[[UC0110]]
+[cols="1h, 3"]
+|===
+|ID                         |**<<UC0110>>**
+|Name                       |Gewinn abführen
+|Description                |Ein Admin sollte in der Lage sein, in einer gesonderten Nutzerumgebung den Gewinn einzusehen und auszuzahlen.
+|Actors                     |Admin
+|Trigger                    |Admin öffnet die Bilanzübersicht und lässt sich Gewinn anzeigen.
+|Precondition(s)           a|Admin lässt sich Bilanzübersicht anzeigen.
+|Essential Steps           a|
+1.  Admin wählt "Gewinn anzeigen" in der Bilanzübersicht aus
+2.  Admin bekommt den Gewinn angezeigt und kann ihn abführen
+|Extensions                 |-
+|Functional Requirements    | <<F0120>>
+|===
+
+[[sequence_diagram_view_catalog]]
+image::.\images\Sequence_Diagrams\View_Product_Details.png[Sequence diagram: View Product Details, 100%, 100%, pdfwidth=100%, title= "Sequence diagram: View Product Details", align=center]
+
+[cols="1h,3"]
+[[UC0120]]
+|===
+|ID                         |**<<UC0120>>**
+|Name                       |Auftrag erstellen
+|Description                |Ein Kunde gibt bei einem Mitarbeiter einen Auftrag ab und dieser soll ihn dem System überstellen.
+|Actors                     |Mitarbeiter
+|Trigger                    |Mitarbeiter gibt Auftrag in das Sytsem ein.
+|Precondition(s)           a|Mitarbeiter ist eingeloggt und hat Zugriff auf die Komponente zur Auftragsverwaltung.
+|Essential Steps           a|
+1.  Mitarbeiter loggt sich ein
+2.  Mitarbeiter gibt Daten in das System ein
+3.  System verarbeitet Auftrag und gibt Ticket für den Kunden aus
+|Extensions                a|
+-   Nur Angemeldete Mitarbeiter dürfen Aufträge erstellem und Stornieren
+-   Jeder Mitarbeiter kann nur seine eigenen Aufträge stornieren
+|Functional Requirements    | <<F0121>>
+|===
+
+[[sequence_diagram_comment_product]]
+image::.\images\Sequence_Diagrams\Comment_Product.png[Sequence diagram: Comment on Product, 100%, 100%, pdfwidth=100%, title= "Sequence diagram: Comment on Product", align=center]
+
+[cols="1h,3"]
+[[UC0121]]
+|===
+|ID                         |**<<UC0121>>**
+|Name                       |Ware abholen
+|Description                |Ein Mitarbeiter soll einem Kunden seine fertige Ware aushändigen.
+|Actors                     |Mitarbeiter
+|Trigger                    |Mitarbeiter bestätigt Abholung der Ware im System
+|Precondition(s)           a|Ware liegt fertig bearbeitet im Lager
+|Essential Steps           a|
+1.  Bei Abholung wird auf Verspätung der Bearbeitung geprüft
+2.  Bei Abholung wird auf Verspätung der Abholung geprüft
+3.  Die nötigen Schritte werden eingeleitet
+|Extensions                 |-
+|Functional Requirements    | <<F0121>>
+|===
+
+[cols="1h,3"]
+[[UC0200]]
+|===
+|ID                         |**<<UC0200>>**
+|Name                       |Ware wird zu spät abgeholt
+|Description                |Ein Mitarbeiter soll einem Kunden seine fertige Ware aushändigen.
+|Actors                     |Mitarbeiter
+|Trigger                    |Mitarbeiter bestätigt Abholung der Ware im System
+|Precondition(s)           a|Ware liegt fertig bearbeitet im Lager
+|Essential Steps           a|
+1.  Bei Abholung wird auf Verspätung der Bearbeitung geprüft
+2.  Bei Abholung wird auf Verspätung der Abholung geprüft
+3.  Gebühren werden auf den Preis aufegschlagen
+4.  Mitarbeiter kassiert die Gebühr
+|Extensions                 |-
+|Functional Requirements    | <<F0200>>, <<F0201>>
+|===
+
+[[sequence_diagram_Add_Product_to_Cart]]
+image::.\images\Sequence_Diagrams\Add_Product_to_Cart.png[Sequence diagram: Add Product to Cart, 100%, 100%, pdfwidth=100%, title= "Sequence diagram: Add Product to Cart", align=center]
+
+[cols="1h,3"]
+[[UC0210]]
+|===
+|ID                         |**<<UC0210>>**
+|Name                       |Karitative Abgabe
+|Description                |Nach Ablauf der Abholungsfrist soll die betroffene Ware karitativ abgegeben werden
+|Actors                     |-
+|Trigger                    |Abholungsfrist läuft ab
+|Precondition(s)           a|
+Ware wurde nicht fristgerecht abgeholt
+|Essential Steps           a|
+1.    Ware wird automatisch zur Abgabe markiert
+2.    Karitative Organisation holt die bis dato markierte Ware ab
+|Extensions                 |-
+|Functional Requirements    | <<F0210>>
+|===
+
+[cols="1h,3"]
+[[UC0220]]
+|===
+|ID                         |**<<UC0220>>**
+|Name                       |Materialien nachbestellen
+|Description                |Fehlende Maerialien sollen automatisch nachbestellt werden
+|Actors                     |-
+|Trigger                    |Sollwert für den nächsten Monat wird unterschritten
+|Precondition(s)           a|
+- Material wurde diesen Monat aufgefüllt
+- Material ist verfügbar
+|Essential Steps           a|
+1.  Material wird als fehlend markiert
+2.  Auftrage mit diesem Material werden pausiert
+3.  Bestellliste wird zusammengetragen
+4.  Material wird bestellt
+|Extensions                 |
+|Functional Requirements    | <<F0101>>, <<F0220>>, <<F0230>>, <<F0240>>, <<F0241>>, <<F0242>>, <<F0243>>
+|===
+
+[[sequence_diagram_Buy_Products_in_Cart]]
+image::.\images\Sequence_Diagrams\Buy_Products_in_Cart.png[<Image removed for educational purposes. Such a complex use case does definitely need to be shown in detail with a sequence diagram.>, 100%, 100%, pdfwidth=100%, title= "<Image removed for educational purposes.>", align=center]
+
+[cols="1h,3"]
+[[UC0300]]
+|===
+|ID                         |**<<UC0300>>**
+|Name                       |Arbeitsgeräte nachbestellen
+|Description                |Fehlende Arbeitsgeräte sollen automatisch nachbestellt werden
+|Actors                     |-
+|Trigger                    |Sollwert für den nächsten Monat wird unterschritten
+|Precondition(s)           a|
+- Arbeitsgerät wurde diesen Monat aufgefüllt
+- Arbeitsgerät ist verfügbar
+|Essential Steps           a|
+1.  Arbeitsgerät wird als fehlend markiert
+2.  Auftrage mit diesem Arbeitsgerät werden pausiert
+3.  Bestellliste wird zusammengetragen
+4.  Arbeitsgerät wird bestellt
+|Extensions                 |-
+|Functional Requirements    | <<F0300>>
+|===
+
+[cols="1h,3"]
+[[UC0310]]
+|===
+|ID                         |**<<UC0310>>**
+|Name                       |Raum buchen
+|Description                |Das System soll automatisch für Bestellungen freie, passende Räume buchen
+|Actors                     |Mitarbeiter
+|Trigger                    |Mitarbeiter übergibt dem System einen neuen Auftrag, welcher bearbeitet werden soll
+|Precondition(s)           a|User is authenticated and has role "Boss"
+|Essential Steps           a|
+1.  Alle Ressourcen sind vorhanden und vollständig
+2.  Im Timetable wird ein freier Slot gesucht
+3. Slot und Ressourcen werden für die Bestellung gebucht
+|Extensions                 |-
+|Functional Requirements    | <<F0310>>
+|===
+
+[[sequence_diagram_View_Orders]]
+image::.\images\Sequence_Diagrams\View_Orders.png[Sequence diagram: View Orders, 100%, 100%, pdfwidth=100%, title= "Sequence diagram: View Orders", align=center]
+
+
+[cols="1h,3"]
+[[UC0320]]
+|===
+|ID                         |**<<UC0320>>**
+|Name                       |Raum löschen
+|Description                |Raum soll wegen aus Datenbank gelöscht werden
+|Actors                     |Admin
+|Trigger                    |Admin löst Löschung des Raumes aus der Datenbank aus
+|Precondition(s)           a|Raum befindet sich in der Datenbank
+|Essential Steps           a|
+1.  Admin wählt die Löschung des Raumes aus
+2.  Raum wird gelöscht
+3.  Raum kann neu erstellt werden
+4.  Raum kann mit Ressourcen verknüpft werden
+|Extensions                 |-
+|Functional Requirements    | <<F0100>>, <<F0320>>
+|===
+
 === Akteure
 
 Akteure sind die Benutzer des Software-Systems oder Nachbarsysteme, welche darauf zugreifen.
