--- a/src/main/asciidoc/srs/produktnutzung.adoc
+++ b/src/main/asciidoc/srs/produktnutzung.adoc
@@ -13,7 +13,7 @@ Das System muss für die folgenden Browser zugänglich und optisch optimiert sei
 -Mozilla Firefox, Version 55.0.3+
 
 Die Hauptnutzer der Software sind Mitarbeiters, die angeblich typische Website-Navigationsschemata kennen,
-sowie Chaf (Admin), der nicht unbedingt über einen technischen Hintergrund verfügt.
+sowie Chef (Admin), der nicht unbedingt über einen technischen Hintergrund verfügt.
 
 Das System muss nicht technisch gewartet werden.
 Alle Daten müssen dauerhaft in einer Datenbank gespeichert sein und über die Applikation zugänglich sein
