--- a/src/main/asciidoc/srs/nicht-funktionale_anforderungen.adoc
+++ b/src/main/asciidoc/srs/nicht-funktionale_anforderungen.adoc
@@ -12,41 +12,56 @@
 Die folgende Tabelle zeigt, welche Qualitätsanforderungen in welchem Umfang erfüllt werden müssen.
 Die erste Spalte listet die Qualitätsanforderungen auf.
 In den folgenden Spalten wird ein "x" verwendet, um die Priorität kennzuzeichnen.
-Die zugewiesene Priorität muss bei der Formulierung der konkreten nichtfunktionalen
-Anforderungen berücksichtigt werden.
-
+Die zugewiesene Priorität muss bei der Formulierung der konkreten nichtfunktionalen Anforderungen berücksichtigt werden.
 
 1 = Nicht wichtig ..
 5 = Sehr wichtig
-[options="header", cols="3h, ^1, ^1, ^1, ^1, ^1"]
+
+[options="header",cols="3h, ^1, ^1, ^1, ^1, ^1"]
 |===
 |Qualitätsanspruch        | 1 | 2 | 3 | 4 | 5
 |Wartbarkeit              |   |   |   | x |
-|Benutzerfreundlichkeit   |   |   | x |   |
-|Sicherkeit               |   |   |   | x |
+|Benutzerfreundlichkeit   |   |   |   |   | x
+|Sicherheit               |   |   |   | x |
 |Design                   |   | x |   |   |
 |===
-
 
 === Konkrete Nicht-Funktionale Anforderungen
 
 :desired-uptime: 99,5%
 
-[options="header", cols="2h, 1, 3, 12"]
+[options="header",cols="2h, 3, 12"]
 |===
 |ID
-|Version
 |Name
 |Beschreibung
 
 |[[NF0010]]<<NF0010>>
-|v0.1
 |Erreichbarkeit - Betriebszeit
 a|
 Das System soll mindestens **{desired-uptime}** der Betriebszeit erreichbar sein.
 
 |[[NF0020]]<<NF0020>>
-|v0.1
 |Sicherheit - Passwortspeicherung
 a|
-Passwörter von Nutzern werden nur als Hash-Werte gespeichert, um Diebstahl zu verhindern.
+Passwörter von Nutzern werden nur als Hash-Werte gespeichert,
+um Diebstahl zu verhindern.
+
+|[[NF0030]]<<NF0030>>
+|Responsive Design
+a|
+Das Design der Anwendung soll responsive auf verschiedene Display-Größen
+reagieren und dort benutzbar dargestellt werden.
+
+|[[NF0040]]<<NF0040>>
+|Hilfreiche Fehlermeldungen
+a|
+Wenn Formulare mit falschen Daten abgeschickt werden,
+sollen dem Nutzer hilfreiche Fehlermeldungnen angezeigt werden.
+
+|[[NF0050]]<<NF0050>>
+|Englische Übersetzung
+a|
+Die Anwendung soll auch vollständig auf englischer Sprache verfügbar sein und
+so auch für internationales Personal bedienbar sein.
+|===
