--- a/src/main/asciidoc/srs/funktionale_anforderungen.adoc
+++ b/src/main/asciidoc/srs/funktionale_anforderungen.adoc
@@ -61,3 +61,7 @@ eine karitative Organisation weitergeben werden.
 |Das System soll die aktuell verfügbaren Dienstleistungen des Reparaturbetriebs erfassen können.
 
 |===
+
+=== Kann-Kriterien
+
+Anforderungen die das Programm leisten können soll, aber für den korrekten Betrieb entbehrlich sind.
