--- a/src/main/asciidoc/srs/akzeptanztestfälle.adoc
+++ b/src/main/asciidoc/srs/akzeptanztestfälle.adoc
@@ -8,6 +8,7 @@ Listen Sie alle Akzeptanztestfälle in tabellarischer Form auf.
 Jeder Testfall soll mit einer ID versehen werde, um später zwischen den Dokumenten (z.B. im Test-Plan) referenzieren zu können.
 ////
 
+[cols="1, 3"]
 |===
 |ID                       |
 |Anwendungsfall           |
@@ -21,6 +22,7 @@ Ein unangemeldeter Angestellter geht zur Login-Maske und meldet sich mit den val
 - Der Angestellte hat jetzt Zugriff auf den Annahmeschalter, die Aufträge etc.
 |===
 
+[cols="1, 3"]
 |===
 |ID                       |
 |Anwendungsfall           |
@@ -35,6 +37,7 @@ _mueller_ aber dem falschen Passwort _321_ an.
 ohne ihm zu verraten, dass der Nutzername richtig war.
 |===
 
+[cols="1, 3"]
 |===
 |ID                       |
 |Anwendungsfall           |
@@ -47,6 +50,7 @@ Der angemeldete Nutzer klickt auf den Logout-Button.
 - Der Nutzer hat jetzt nur noch Zugriff auf die Start- und Login-Seite.
 |===
 
+[cols="1, 3"]
 |===
 |ID                       |
 |Anwendungsfall           |
@@ -65,6 +69,7 @@ Zudem nimmt er den Gegenstand entgegen.
 - Für den Kunden wird ein Auftragszettel generiert.
 |===
 
+[cols="1, 3"]
 |===
 |ID                       |
 |Anwendungsfall           |
@@ -76,6 +81,7 @@ Der Filialleiter trägt einen neu hinzugekommenen Raum in die Raumverwaltung ein
 - Vielleicht werden auch bestehende Aufträge in den neuen Raum verteilt, damit sie schneller fertig werden.
 |===
 
+[cols="1, 3"]
 |===
 |ID                       |
 |Anwendungsfall           |
@@ -91,6 +97,7 @@ Ein angemeldete Angestellter geht auf die Auftragsseite und löst den Gegenstand
 - Die Jeans wird aus dem Lager-System entfernt.
 |===
 
+[cols="1, 3"]
 |===
 |ID                       |
 |Anwendungsfall           |
@@ -104,6 +111,7 @@ Die Jeans sind jetzt erst fertig geworden.
 - Die Jeans wird aus dem Lager-System entfernt.
 |===
 
+[cols="1, 3"]
 |===
 |ID                       |
 |Anwendungsfall           |
@@ -117,6 +125,7 @@ Die Jeans sind jetzt erst fertig geworden.
 - Die Jeans wird aus dem Lager-System entfernt.
 |===
 
+[cols="1, 3"]
 |===
 |ID                       |
 |Anwendungsfall           |
@@ -129,6 +138,7 @@ Die Jeans ist schon seit einer Woche und drei Monaten nicht abgeholt worden.
 - Der Auftrags-Zustand wird entsprechend gesetzt.
 |===
 
+[cols="1, 3"]
 |===
 |ID                       |
 |Anwendungsfall           |
@@ -141,6 +151,7 @@ Der Filialleiter trägt einen neuen Mitarbeiter in das System ein, der Schustern
 - Vielleicht werden auch bestehende Aufträge an den Mitarbeiter verteilt, damit sie schneller fertig werden.
 |===
 
+[cols="1, 3"]
 |===
 |ID                       |
 |Anwendungsfall           |
